refactor: separating data transfer objects into a folder
